# DeskXiuxian

./: .gitignore  CMakeLists.txt  DeskXiuxian.pro  DeskXiuxian_zh_CN.ts  README.md  img.qrc  main.cpp  main_ctrl.cpp  main_ctrl.h  mainctrl.cpp  mainctrl.h  mainui.cpp  mainui.h  mainui.ui
business/: db_manage.cpp  db_manage.h  item_manage.cpp  item_manage.h  progress_manage.cpp  progress_manage.h  role_manage.cpp  role_manage.h  ue_manage.h  ui_manage.cpp  ui_manage.h
common/: my_std_thread.h  singleton.h  sync_mechanism.cpp  sync_mechanism.h  web_socket_client.cpp  web_socket_server.cpp  web_socket_server.h  wss_client.cpp  wss_client.h  wss_server.cpp  wss_server.h
cultivation/: cultivationsystem.cpp  cultivationsystem.h
filedata/: datamanage.cpp  datamanage.h  datamanage_remote_data.cpp  datamanage_settings.cpp
game_progress/: gameprogress.cpp  gameprogress.h
item/: itembase.cpp  itembase.h  itemsystem.cpp  itemsystem.h
logger/: logger.cpp  logger.h
modules/: interface_manager.cpp  interface_manager.h  main.cpp  main_ctrl.cpp  main_ctrl.h
modules/filedata/: base_table.cpp  base_table.h  data_manage.cpp  data_manage.h  data_service.cpp  data_service.h  data_service_remote_data.cpp  data_service_settings.cpp  datamanage_remote_data.cpp  datamanage_settings.cpp  dataservice_remote_data.cpp  db_manage.cpp  db_manage.h  db_system.cpp  db_system.h  role_db.cpp  role_db.h
modules/game_progress/: game_progress.cpp  gameprogress.h  progress_system.cpp  progress_system.h
modules/item/: item_manage.cpp  item_manage.h  item_service.cpp  item_service.h  item_system.cpp  item_system.h  itembase.cpp  itembase.h
modules/item/equip/: title.cpp  title.h
modules/item/prop/: prop_rename_card.cpp  prop_rename_card.h  prop_yanshoudan10.cpp  prop_yanshoudan10.h
modules/logger/: logger.cpp  logger.h
modules/progress/: game_service.cpp  progress_manage.cpp  progress_manage.h  progress_service.cpp  progress_service.h
modules/public/: error_code.h  error_display.cpp  error_display.h  public_declare.h  public_func.cpp  public_func.h  public_macro.h  public_type.h
modules/role/: encrypt_int.h  role_manage.cpp  role_manage.h  role_player.cpp  role_player.h  role_system.cpp  role_system.h  simple_int_encryptor.h
modules/server/: tcp_client.cpp  tcp_client.h  web_socket_client.cpp  web_socket_client.h  web_socket_define.h
modules/ui/: jsonDataAdapter.cpp  jsonDataAdapter.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  main_ui.cpp  main_ui.h  main_ui.ui  mainui.cpp  mainui.h  mainui.ui  modifyrolename.cpp  modifyrolename.h  qmladapter.cpp  qmladapter.h  ui_manage.cpp  ui_manage.h  ui_system.cpp  ui_system.h
modules/ui/qml/: WelcomePage.qml  create_component.js  main.qml  welcome_page.qml
modules/ui/qml/adapter/: ScreenAdapter.qml  qmldir
modules/ui/qml/components/: CircleRingText.qml  CleanTaskCard.qml  ColorButton.qml  CustomButton.qml  CustomDialog.qml  CustomMediaPlayer.qml  CustomPopup.qml  CustomProgressBar.qml  CustomSlider.qml  CustomTextEdit.qml  CustomToolSeparator.qml  CustomVirtualKeyBoard.qml  ImageButton.qml  ImageRightButton.qml  MessageManager.qml  RadioBox.qml  Spinner.qml  TextButtonNormalSize.qml  TimeSelectBox.qml  Toast.qml  ToastManager.qml
modules/ui/qml/json/: JsonData.qml  JsonData.qmlc  qmldir
public/: error_code.h  public_declare.h  public_func.cpp  public_func.h  public_macro.h  public_type.h
role/: rolesystem.cpp  rolesystem.h
server/: tcp_client.cpp  tcp_client.h
ui/: loginwindow.cpp  loginwindow.h  loginwindow.ui  modifyrolename.cpp  modifyrolename.h  modifyrolename.ui
